# hal_telink

./: CMakeLists.txt
tlsr9/: CMakeLists.txt
tlsr9/ble/: config.h  drivers.h
tlsr9/ble/stack/ble/TL321X/: ble.h  ble_common.h  ble_config.h  ble_format.h  ble_stack.h
tlsr9/ble/stack/ble/TL321X/controller/: ble_controller.h  contr_comp.h  os_sup.h
tlsr9/ble/stack/ble/TL321X/controller/cs_drbg/: drbg_stack.h
tlsr9/ble/stack/ble/TL321X/controller/csa/: csa.h  csa_stack.h
tlsr9/ble/stack/ble/TL321X/controller/ial/: ial.h  ial_stack.h
tlsr9/ble/stack/ble/TL321X/controller/ll/: ll.h  ll_bqb_stack.h  ll_pm.h  ll_stack.h
tlsr9/ble/stack/ble/TL321X/controller/ll/acl_conn/: acl_central.h  acl_conn.h  acl_peripheral.h  acl_stack.h
tlsr9/ble/stack/ble/TL321X/controller/ll/acl_conn/acl_sniffer/: acl_sniffer.h  acl_sniffer_mst.h  (+2 more)
tlsr9/ble/stack/ble/TL321X/controller/ll/adv/: adv.h  adv_stack.h  ext_adv.h  leg_adv.h
tlsr9/ble/stack/ble/TL321X/controller/ll/aoa_aod/: aoa_aod.h  aoa_stack.h
tlsr9/ble/stack/ble/TL321X/controller/ll/chn_class/: chn_class.h
tlsr9/ble/stack/ble/TL321X/controller/ll/chn_sound/: chn_initiator.h  chn_reflector.h  chn_sound.h  chn_sound_stack.h
tlsr9/ble/stack/ble/TL321X/controller/ll/init/: ext_init.h  init.h  init_stack.h  leg_init.h
tlsr9/ble/stack/ble/TL321X/controller/ll/iso/: bis.h  bis_bcst.h  bis_stack.h  bis_sync.h  cis.h  cis_central.h  cis_peripheral.h  cis_stack.h  iso.h  iso_stack.h
tlsr9/ble/stack/ble/TL321X/controller/ll/llmic/: llmic.h  llmic_internal.h
tlsr9/ble/stack/ble/TL321X/controller/ll/past/: past.h  past_stack.h
tlsr9/ble/stack/ble/TL321X/controller/ll/pcl/: pcl.h
tlsr9/ble/stack/ble/TL321X/controller/ll/prdadv/: PAwR_adv.h  PAwR_sync.h  pda.h  pda_stack.h  pda_sync.h  prd_adv.h
tlsr9/ble/stack/ble/TL321X/controller/ll/scan/: ext_scan.h  leg_scan.h  scan.h  scan_stack.h
tlsr9/ble/stack/ble/TL321X/controller/ll/subrate/: subrate.h  subrate_stack.h
tlsr9/ble/stack/ble/TL321X/controller/phy/: phy.h  phy_stack.h  phy_test.h
tlsr9/ble/stack/ble/TL321X/controller/whitelist/: resolvelist.h  whitelist.h  whitelist_stack.h
tlsr9/ble/stack/ble/TL321X/hci/: hci.h  hci_cmd.h  hci_const.h  hci_event.h  hci_stack.h  hci_vendor.h
tlsr9/ble/stack/ble/TL721X/: ble_config.h  ble_stack.h  os_sup.h
tlsr9/ble/stack/ble/TL721X/controller/: ble_controller.h
tlsr9/ble/stack/ble/TL721X/controller/ll/past/: past.h
tlsr9/common/: b9x_sleep.h  tl_rf_power.c  tl_rf_power.h  tl_sleep.c  tl_sleep.h
tlsr9/common/tlx/: tlx_rf_power.c  tlx_rf_power.h  tlx_sleep.c  tlx_sleep.h
tlsr9/crypto/mbedtls/: CMakeLists.txt  ecp_b9x_backend.c  ecp_backend.c  ecp_backend_test.c  ecp_tlx_backend.c  mbedtls_wrapper.c  multithread.c  telink_soc_mbedtls_user_config.h
tlsr9/crypto/mbedtls/internal/: ecp_alt_tlx_backend.c
tlsr9/drivers/B91/: rf.h
tlsr9/drivers/B92/: analog.c  analog.h  flash.c  i2c.c  pwm.c  pwm.h  usbhw.h
tlsr9/drivers/B92/lib/include/: pm.h
tlsr9/drivers/TL321X/: adc.c  adc.h  aes.c  aes.h  audio.h  dma.h  driver.h  driver_tl321x.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  ir_learn.h  lpc.h  plic_sw.h  plmt.h  pwm.c  pwm.h  qdec.h  s7816.h  spi.c  spi.h  timer.h  uart.h  usbhw.c  usbhw.h  watchdog.h
tlsr9/drivers/TL321X/compatibility_pack/: cmpt.h
tlsr9/drivers/TL321X/error_handler/: error_handler.h
tlsr9/drivers/TL321X/ext_driver/: driver_ext.h  ext_audio.h  ext_codec.h  ext_flash.h  ext_hci_uart.h  ext_misc.h  ext_pm.h  ext_uart.h  mcu_boot.h  mcu_config.h  software_pa.h
tlsr9/drivers/TL321X/ext_driver/driver_internal/: driver_internal.h  ext_lib.h  mcu_cfg_internal.h
tlsr9/drivers/TL321X/flash/: flash_common.h  flash_mid136085.h  flash_mid146085.h  flash_mid156085.h  flash_mid166085.h  flash_mid1660c8.h  flash_type.h
tlsr9/drivers/TL321X/lib/include/: analog.h  clock.h  core.h  efuse.h  emi.h  emi_internal.h  flash_base.h  flash_prot.h  mspi.h  plic.h  stimer.h  swire.h  sys.h
tlsr9/drivers/TL321X/lib/include/crypto_common/: common_config.h  eccp_curve.h  utility.h
tlsr9/drivers/TL321X/lib/include/hash/: hash.h  hash_algorithm.h  hash_basic.h  hmac.h  hmac_md5.h  hmac_sha1.h  hmac_sha224.h  hmac_sha256.h  hmac_sha384.h  hmac_sha512.h  hmac_sha512_224.h  hmac_sha512_256.h  hmac_sm3.h  md5.h  pbkdf2.h  sha1.h  sha224.h  sha256.h  sha384.h  sha512.h  sha512_224.h  sha512_256.h  sm3.h
tlsr9/drivers/TL321X/lib/include/pke/: dh.h  eccp_curve.h  ecdh.h  ecdsa.h  ecies.h  ed25519.h  jpake.h  pke.h  pke_algorithm.h  pke_common.h  pke_config.h  pke_portable.h  pke_prime.h  pke_utility.h  rsa.h  sm2.h  sm9.h  x25519.h
tlsr9/drivers/TL321X/lib/include/pm/: pm.h  pm_internal.h
tlsr9/drivers/TL321X/lib/include/rf/: aoa.h  hadm.h  rf_ble.h  rf_common.h  rf_dma.h  rf_internal.h  rf_private.h  rf_zigbee.h
tlsr9/drivers/TL321X/lib/include/ske/: ske.h  ske_algorithm.h  ske_basic.h  ske_cbc.h  ske_ccm.h  ske_cfb.h  ske_ctr.h  ske_ecb.h  ske_gcm_gmac.h  ske_ofb.h  ske_portable.h
tlsr9/drivers/TL321X/lib/include/trng/: trng.h  trng_algorithm.h  trng_basic.h  trng_config.h  trng_portable.h
tlsr9/drivers/TL321X/reg_include/: adc_reg.h  analog_afe1v_reg.h  analog_afe3v_reg.h  analog_reg.h  audio_reg.h  core_reg.h  dma_reg.h  gpio_reg.h  hash_reg.h  i2c_reg.h  ir_learn_reg.h  mspi_reg.h  pke_reg.h  plic_reg.h  plic_sw_reg.h  plmt_reg.h  pwm_reg.h  qdec_reg.h  register.h  rf_reg.h  ske_reg.h  soc.h  spi_reg.h  stimer_reg.h  swire_reg.h  timer_reg.h  uart_reg.h  usb_reg.h
tlsr9/drivers/TL721X/: adc.c  adc.h  driver_tl721x.h  flash.c  flash.h  usbhw.h
tlsr9/drivers/TL721X/ext_driver/: driver_ext.h  ext_hci_uart.h  ext_pm.h  ext_uart.h
tlsr9/drivers/TL721X/ext_driver/driver_internal/: driver_internal.h  ext_lib.h  ext_rf.h  mcu_cfg_internal.h
tlsr9/drivers/TL721X/flash/: flash_common.h  flash_mid156085.h  flash_type.h
tlsr9/drivers/TL721X/lib/include/: sys.h
tlsr9/drivers/TL721X/lib/include/pke/: pke.h
tlsr9/drivers/TL721X/lib/include/pm/: pm_internal.h
tlsr9/drivers/TL721X/lib/include/rf/: rf_common.h
tlsr9/drivers/TL721X/lib/include/trng/: trng_portable.h
(+3 files in other folders)
